# IronDAG

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IDAG_One_Pager.docx  IDAG_Roadmap.docx  IDAG_Technical_Overview.docx  IDAG_Tokenomics.docx  IronDAG_WHITEPAPER.html  IronDAG_WHITEPAPER.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  TOKENOMICS.md  TRADEMARK_POLICY.md  V1_SPECIFICATION.md  check_balances.js  deploy_contract.js  docker-compose.testnet.yml  docker-compose.yml  erc20_graduation_exam.js  foundry.toml  irondag.service  package-lock.json  package.json  perf_profile.js  slither-report.json  smoke_test_canary.js  smoke_test_simple.js  storage_debug.js  test_explorer_tx.js  testnet.toml  testnet_status.html
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  (+3 more)
SECURITY/: SECURITY_BEST_PRACTICES.md  SECURITY_GUIDE.md
USER_GUIDES/: STAKING_GUIDE.md  WALLET_GUIDE.md
brand-assets/: README.md  TECHNICAL_PROOF_SHEET.md
contracts/: IronDAGCanary.sol  IronDAGToken.sol
deploy/: irondag-node.service
docs/: AUDIT_SCOPE.md  BLOCKDAG_SHARDING_ANALYSIS.md  BRAIDCORE_DEEP_DIVE.md  BRAIDCORE_FIXES_IMPLEMENTATION_GUIDE.md  BRAIDCORE_GAME_THEORY.md  BRAIDCORE_MINING_ANALYSIS.md  CPU_OPTIMIZATION.md  CRITICAL_FIXES_PRIORITIZATION.md  IMPLEMENTATION_VERIFICATION_CODEBASE.md  INSTALL_FORGE.md  INSTALL_PROTOC.md  MINING_GUIDE.md  OPEN_ISSUES_PLAN.md  PEERING_ANALYSIS.md  PHASE6_COMPLETION_PLAN.md  PHASE7_SOLANA_INTEGRATION.md  PROJECT_STATUS_VERIFICATION_2026-02.md  QUIC_SYNC_OPERATIONS.md  RPC_API_REFERENCE.md  SECURITY_PATCHES.md  SMART_CONTRACT_TUTORIAL.md  SOLANA_HYBRID_ARCHITECTURE.md  SYSTEM_REVIEW_RPC_STORAGE_EVM_AA_PRIVACY.md  TESTING_PLAN.md
grafana/: README.md  START_GRAFANA.md  docker-compose.yml
irondag-blockchain/: Cargo.toml  NODE_RESTART_GUIDE.md  PROJECT_STATUS.md  TESTNET_SETUP.md  build.rs  mining_monitor.html
irondag-blockchain/.cargo/: audit.toml
irondag-blockchain/.github/workflows/: ci.yml
irondag-blockchain/benches/: storage_bench.rs
irondag-blockchain/docs/: ARCHITECTURE.md  NETWORK_SECURITY.md  THREAT_MODEL.md
irondag-blockchain/examples/: prove_pow.rs  test_rpc_deadlock.rs
irondag-blockchain/proto/: rpc.proto  rpc_v2.proto
irondag-blockchain/src/: config.rs  error.rs  gas_sponsorship.rs  lib.rs  light_client.rs  metrics.rs  mining.rs  network.rs  noise.rs  pow.rs  privacy_pool.rs  quic_transport.rs  reputation.rs  rpc.rs  storage.rs  types.rs
irondag-blockchain/src/account_abstraction/: batch.rs  factory.rs  integration_tests.rs  integration_tests_phase5.rs  mod.rs  multisig.rs  multisig_integration_tests.rs  registry.rs  social_recovery.rs  tests.rs  wallet.rs
irondag-blockchain/src/blockchain/: block.rs  mod.rs  tests.rs  tests_proptest.rs  tests_quick_wins.rs  tests_timestamp_validation.rs
irondag-blockchain/src/consensus/: mod.rs  storage.rs  tests_storage.rs
irondag-blockchain/src/evm/: benchmark.rs  integration.rs  mod.rs  parallel.rs  state_snapshot.rs
irondag-blockchain/src/governance/: longevity.rs  mod.rs  node_identity.rs  registry.rs  scheduler.rs  tests.rs
irondag-blockchain/src/mining/: fairness.rs  ordering.rs
irondag-blockchain/src/network/: stun.rs  sync.rs
irondag-blockchain/src/node/: mod.rs  pool.rs
irondag-blockchain/src/oracles/: mod.rs  price_feed.rs  registry.rs  staking.rs  tests.rs  vrf.rs
irondag-blockchain/src/pqc/: accounts.rs  encryption.rs  kyber.rs  mod.rs  tooling.rs
irondag-blockchain/src/privacy/: benchmarks.rs  circuit.rs  commitment.rs  end_to_end_tests.rs  integration_tests.rs  keys.rs  manager.rs  merkle.rs  mod.rs  nullifier.rs  prover.rs  tests.rs  transaction.rs  verifier.rs
irondag-blockchain/src/recurring/: manager.rs  mod.rs  scheduler.rs  tests.rs
irondag-blockchain/src/rpc/: grpc.rs  irondag.rpc.rs  rate_limit.rs  v2.rs
irondag-blockchain/src/security/: forensics.rs  fraud_detection.rs  hardening.rs  mod.rs  policies.rs  risk_scoring.rs
irondag-blockchain/src/sharding/: async_messaging.rs  mod.rs
irondag-blockchain/src/stop_loss/: manager.rs  mod.rs  monitor.rs  tests.rs
irondag-blockchain/src/verkle/: kzg.rs  mod.rs  proof.rs  tree.rs
irondag-blockchain/src/zk/: mod.rs  state_transition.rs
irondag-blockchain/tests/: blockchain_consensus.rs  end_to_end.rs  evm_integration.rs  integration_test.rs  mining_blockchain.rs  mod.rs  multi_node_integration.rs  network_blockchain.rs  rpc_auth_rate_limit.rs  rpc_test.rs  sharding_basic_test.rs  sharding_cross_shard_test.rs  sharding_e2e.rs  sharding_integration.rs  sharding_tps_benchmark.rs  storage_blockchain.rs  test_storage_write.rs  transaction_pool.rs  validate_improvements.rs
irondag-blockchain/tests/common/: mod.rs
irondag-blockchain/tests/integration/: blockchain_consensus.rs  end_to_end.rs  mining_blockchain.rs  mod.rs  storage_blockchain.rs  transaction_pool.rs
irondag-blockchain/tests/multi_node/: block_propagation.rs  node_startup.rs  synchronization.rs
irondag-blockchain/tests/network/: test_header_validation.rs
irondag-desktop/: .gitignore  README.md  WINDOWS_BUILD_GUIDE.md  index.html  package-lock.json  package.json
irondag-desktop/src-tauri/: Cargo.toml  tauri.conf.json
irondag-desktop/src-tauri/src/: lib.rs  main.rs
irondag-explorer/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
irondag-explorer-frontend/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  vite.config.ts
local_env/: .gitignore  README.md  example-config.toml  node-dashboard.html  testnet-genesis.json
release/: README.txt
scripts/: integration_two_nodes.ps1  irondag-miner.service.example  irondag.service.example  local_multinode.ps1  local_two_nodes.ps1  stop_local_nodes.ps1  test_local_cluster.ps1
test/: IronDAGCanary.t.sol  IronDAGToken.t.sol
testnet-tests/: package.json
wiki/: API-Reference.md  Architecture-Overview.md  Dependencies.md  Getting-Started.md  Home.md  Module-Reference.md  _Footer.md  _Sidebar.md
(+71 files in other folders)
