[package]
# Copyright (c) 2024-2026 IronDAG Project
# Licensed under the Business Source License 1.1 (see LICENSE file)
name = "irondag"
version = "1.0.0"
edition = "2021"
authors = ["IronDAG Team"]
description = "IronDAG Protocol ($IDAG) - Dual-stream GhostDAG blockchain with post-quantum P2P and EVM"
license = "BUSL-1.1"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
blake3 = "1.5"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
# SputnikVM for EVM execution
evm = { version = "0.41", features = ["tracing"] }
# primitive-types for SputnikVM (H160, H256, U256) - SputnikVM 0.41 supports up to the Berlin EVM revision
primitive-types = "0.12"
sled = "0.34"
# Secure memory zeroing for cryptographic keys
zeroize = { version = "1", features = ["alloc"] }
# Storage compression for large values (contract code)
zstd = "0.13"
tempfile = "3"
bincode = "1.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
config = "0.14"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.14"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
# RLP encoding for EIP-155/Ethereum transaction compatibility (alloy-rlp replaces unmaintained rlp 0.5)
alloy-rlp = { version = "0.3", features = ["derive"] }
alloy-primitives = "0.8"
rand = "0.8"
rand_core = "0.6"
siphasher = "1"
# rand_core 0.10 for ml-kem compatibility (ml-kem 0.3.0-rc.2 uses rand_core 0.10 via crypto-common 0.2)
rand_core_09 = { package = "rand_core", version = "0.10", optional = true }
# Lock-free concurrent map for high-performance account storage
dashmap = "6.0"
# Cross-platform file locking (single-process DB guarantee)
fs2 = "0.4"
# HTTP client for load testing
reqwest = { version = "0.12", features = ["json"] }
# Fast synchronization primitives for hash caching
parking_lot = "0.12"
# SYNC-001: Scopeguard for RAII-style cleanup (ensures mining resumes on sync error)
scopeguard = "1.2"
# Post-Quantum Cryptography
pqcrypto-traits = "0.3.5"
pqcrypto-mldsa = "0.1"
# Pure Rust post-quantum cryptography — all platforms, no C bindings
# ml-kem implements FIPS 203 (ML-KEM-768) natively on Windows, Linux, macOS
ml-kem = { version = "0.3.0-rc.2", optional = true }
# SPHINCS+ via pqcrypto-sphincsplus (works on all platforms with rand_core 0.6)
pqcrypto-sphincsplus = { version = "0.7", optional = true }
aes-gcm = "0.10"
crossbeam-queue = "0.3"
# zk-SNARKs for Privacy Layer (optional, gated by privacy feature)
ark-bn254 = { version = "0.5", optional = true }
ark-groth16 = { version = "0.5", optional = true }
ark-relations = { version = "0.5", optional = true }
ark-ec = { version = "0.5", optional = true }
ark-ff = { version = "0.5", optional = true }
ark-std = { version = "0.5", optional = true }
ark-poly = { version = "0.5", optional = true }
ark-serialize = { version = "0.5", optional = true }
ark-snark = { version = "0.5", optional = true }
# gRPC (Tonic) for high-performance RPC with HTTP/2
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
# HTTP/2 support
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
h2 = "0.4"
# TLS/SSL support for RPC server
rustls = { version = "0.23", features = ["std", "ring"] }
tokio-rustls = "0.26"
rustls-pki-types = "1"
# QUIC transport for P2P
quinn = { version = "0.11", features = ["rustls"] }
rcgen = "0.13"
# Socket options for SO_REUSEADDR support
socket2 = "0.5"
x509-parser = "0.16"
time = "0.3"
# Protobuf compilation (tonic-build in build-dependencies only)
tonic-build = "0.11"
# OpenCL for GPU mining (optional)
ocl = { version = "0.19", optional = true }
# CPU count for mining thread configuration
num_cpus = "1.16"
# Parallel iterators for CPU-bound signature pre-pass
rayon = "1"

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.11"

[features]
default = []
privacy = ["ark-groth16", "ark-bn254", "ark-ff", "ark-relations", "ark-serialize", "ark-std", "ark-snark", "ark-ec", "ark-poly"]
gpu = ["ocl"]
sphincsplus = ["dep:pqcrypto-sphincsplus"]
kyber = ["dep:ml-kem", "dep:rand_core_09"]

[[bin]]
name = "irondagd"
path = "src/bin/node.rs"

[[bin]]
name = "zk_setup"
path = "src/bin/zk_setup.rs"
required-features = ["privacy"]

[[bin]]
name = "load_test"
path = "src/bin/load_test.rs"

[[example]]
name = "prove_pow"
path = "examples/prove_pow.rs"

[[bench]]
name = "storage_bench"
harness = false

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
proptest = "1.4"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
