[package]
name = "irondag-desktop"
version = "0.2.0"
description = "All-in-One Desktop Experience for IronDAG Blockchain - Phase 2 Complete"
authors = ["IronDAG Protocol"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "irondag_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
ed25519-dalek = "2"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ctrlc = "3.4"
aes-gcm = "0.10"
argon2 = "0.5"
dirs = "5"
zeroize = "1"

